2007-12-10  Neal H. Walfield  <neal@gnu.org>

	* assert.h [! NDEBUG]: Include <l4/thread.h>.
	[! NDEBUG] (assert): Also print the caller's thread id.

2007-11-16  Neal H. Walfield  <neal@gnu.org>

	* assert.h (assert): Print program_name and EXPR as a string.

2007-10-17  Neal H. Walfield  <neal@gnu.org>

	* assert.h [_L4_TEST_ENVIRONMENT]: Include the next <assert.h>.

2005-01-12  Neal H. Walfield  <neal@gnu.org>

	* assert.h: Include prototype for printf.
	(assert) [!NDEBUG]: Rewrite to do something useful.

2004-10-20  Marcus Brinkmann  <marcus@gnu.org>

	* assert.h (assert): Only define if not defined.

2004-04-05  Marcus Brinkmann  <marcus@gnu.org>

	* assert.h (assert): Fix last change.

2004-03-25  Marcus Brinkmann  <marcus@gnu.org>

	* assert.h (assert): Provide a dummy statement.

2003-10-16  Johan Rydberg  <jrydberg@night.trouble.net>

	* Makefile.am (libc_parts_a_SOURCES): Add assert.h.
	* assert.h: New file.

2003-09-19  Marcus Brinkmann  <marcus@gnu.org>

	* ctype.h, errno.h, errno.c: New files.
	* c-ctype.h, c-ctype.c, strtol.c: New files from gnulib.
	* Makefile.am (libc_parts_a_SOURCES): Add ctype.h, c-ctype.h,
	c-ctype.c, errno.h, errno.c, strtol.c, strtoll.c, strtoul.c and
	strtoull.c.
	(routines): Add atoi, atoll, strtoimax and strtoumax.